# Guardian-USB

./: .env.example  .gitignore  Dockerfile  HOW-TO-USE-FROM-USB.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/vuln_db/: sample_cves.json
guardian/: __init__.py
guardian/api/: __init__.py  app.py  auth.py
guardian/api/routes/: __init__.py  assets.py  compliance.py  reports.py  scans.py  vulnerabilities.py
guardian/automation/: __init__.py  scheduler.py  tasks.py
guardian/cli/: __init__.py  main.py
guardian/compliance/: __init__.py  checker.py
guardian/compliance/rules/: __init__.py  disk_encryption.py  firewall_rules.py  password_policy.py  ssh_hardening.py  tls_policy.py
guardian/core/: __init__.py  config.py  exceptions.py  models.py  schemas.py
guardian/database/: engine.py
guardian/database/repositories/: __init__.py  (+3 more)
guardian/discovery/: __init__.py  asset_collector.py  network_scanner.py  service_discovery.py  software_inventory.py
guardian/fingerprinting/: __init__.py  cpe_builder.py  os_fingerprint.py  service_fingerprint.py
guardian/plugins/: __init__.py  base.py  loader.py
guardian/reporting/: __init__.py  generator.py
guardian/risk_engine/: __init__.py  prioritizer.py  scorer.py
guardian/updates/: __init__.py  nvd_sync.py  offline_import.py
guardian/vulnerability_engine/: __init__.py  cve_matcher.py  engine.py
portable/linux/: run.sh
portable/macos/: run.sh
portable/shared/: quick-scan.sh
portable/windows/: run.bat  run.ps1
tests/: test_compliance.py  test_cve_matcher.py  test_risk_engine.py
(+10 files in other folders)
