[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-usb"
version = "0.1.0"
description = "Guardian USB — Vulnerability Management Platform"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
    "requests>=2.31",
    "apscheduler>=3.10",
    "python-nmap>=0.7",
    "paramiko>=3.4",
    "cryptography>=42.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "aiofiles>=23.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
guardian = "guardian.cli.main:app"

[tool.setuptools.packages.find]
include = ["guardian*"]
